bug: Card heigth should scale on mobile devices

--- a/css/styles.css
+++ b/css/styles.css
@@ -36,7 +36,6 @@
 }
 
 #deck > * {
-    font-size: 500%;
     border-style: solid;
     border-color: black;
 }
